TabbedPane: Fix MdTab::OnBlur

This cl fixes a logic in OnBlur in MdTab. If it is not kHighlight,
the focus ring should be cleared.

Bug: 858951
Test: manual.
Change-Id: I0799ad506ce71e1a77de6be0332523cffad5959d
Reviewed-on: https://chromium-review.googlesource.com/1120682
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571594}
Former-commit-id: 477fb82e57b9df5ca1c41d23756f48174ac724ee